webapp/src/app/map/map.component.scss
@import "../../styles.scss";

* {
  box-sizing: border-box;
  margin: 0;
  font-family: Helvetica, sans-serif;
}

header {
  text-align: center;
  font-size: large;
}

.map-container {
  margin: 10px;
}

.map-frame {
  border: 2px solid black;
  height: 100%;
}

#map {
  margin: auto;
  width: 80%;
  height: 500px;
}

#chart {
  margin: auto;
  width: 80%;
  margin-bottom: 100px;
}

footer {
  bottom: 0;
  position: fixed;
  width: 100%;
  border-top: #c6e09b 5px solid;
  color: #fff;
  font-size: 18px;
  background-color: #0079a5;
  padding: 25px;
  text-align: right;
  z-index: 999;
}

